Closed
Bug 232405
Opened 22 years ago
Closed 16 years ago
textbox/textarea doesn't scroll if I change cursor position with setSelectionRange, selectionStart, etc.
Categories
(Core :: DOM: Editor, defect)
Core
DOM: Editor
Tracking
()
RESOLVED
FIXED
mozilla1.9.3a4
People
(Reporter: surkov, Assigned: ehsan.akhgari)
References
Details
(Keywords: access, testcase, Whiteboard: [fixed by bug 231389])
Attachments
(2 files)
User-Agent:
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6) Gecko/20040113
If I change cursor position in html:input by setSelectionRange() method or by
properties selectionStart and selectionEnd then text isn't scrolled on new
cursor position.
How can I manage visible text range in this case?
Reproducible: Always
Steps to Reproduce:
| Reporter | ||
Comment 1•22 years ago
|
||
Comment 2•22 years ago
|
||
Editor.
Assignee: general → mozeditor
Status: UNCONFIRMED → NEW
Component: DOM: HTML → Editor: Core
Ever confirmed: true
OS: Windows 2000 → All
QA Contact: ian → sairuh
Hardware: PC → All
Comment 3•19 years ago
|
||
This is annoying when using the "Valid XHTML" user script at http://www.squarefree.com/userscripts/valid-xhtml.user.js, because it makes it difficult to see where the error is. The script is able to select the error but is not able to scroll the textarea to make the error visible.
It might be possible for JavaScript code to work around this bug by setting scrollTop (as in the workarounds for the controversial bug 231389), but that would be hard because I don't know exactly how tall each line of the textarea is.
Comment 4•19 years ago
|
||
This has tests for setting the selection/caret position both before and after focusing the textarea. The "before" cases might be bug 353539 rather than this bug.
Updated•19 years ago
|
QA Contact: bugzilla → editor
Updated•19 years ago
|
Assignee: mozeditor → nobody
Bug 231389 has a solution for this problem.
| Assignee | ||
Comment 7•16 years ago
|
||
My patch in bug 231389 fixes this problem.
Assignee: nobody → ehsan.akhgari
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Whiteboard: [fixed by bug 231389]
Target Milestone: --- → mozilla1.9.3a4
You need to log in
before you can comment on or make changes to this bug.
Description
•